# armulet

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  armulet.c  armulet.h  armulet_accessors.h
carmulet/: CMakeLists.txt  carmulet.c  carmulet.h
test/: CMakeLists.txt  assembler.h  instruction_test.cpp  instruction_test2.cpp  undef_inst_test.cpp  varmulet_hooks_test.S  varmulet_hooks_test.h
varmulet/: CMakeLists.txt  varmulet.S  varmulet.h  varmulet_armv6m_core.S  varmulet_hooks_default.S  varmulet_hooks_metal_irq.S  varmulet_macros.inc.S
